--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
     </div>
 
     <div id="searchContainer" class="search-container">
-      <input type="text" id="searchBox" placeholder="Enter destination..." />
-      <button id="searchSubmit">Go</button>
-  </div>
+        <input type="text" id="searchBox" placeholder="Enter destination..." />
+        <button id="searchSubmit">Go</button>
+    </div>
 
     <div class="video-container" id="home">
         <video autoplay loop muted playsinline>
             <source src="https://media.istockphoto.com/id/1236530123/video/the-man-standing-on-the-mountain-cliff-with-a-beautiful-landscape.mp4?s=mp4-640x640-is&k=20&c=cxhEmswh6oGviULwUzq4jf7q48198wg0YBzZepZi9lY=">
         </video>
+        <div class="caption">
+            <span class="border">Welcome</span>
+        </div>
         
     </div>
-    <div class="caption">
-        <span class="border">Welcome</span>
-    </div>
+    
 
     <div id="search">
         <h3>Travel</h3>
@@ -59,6 +60,8 @@
             <span class="border">Explore More</span>
         </div>
     </div>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
