--- a/travel.html
+++ b/travel.html
@@ -82,7 +82,7 @@
     <div class="tip"><strong>5. Respect Local Culture:</strong> Learn basic phrases, traditions, and respect local customs.</div>
   </div>
 
-  <a href="home.html" class="btn-back">⬅ Back to Home</a>
+  <a href="index.html" class="btn-back">⬅ Back to Home</a>
 </div>
 
 </body>
