--- a/stays.html
+++ b/stays.html
@@ -44,6 +44,24 @@
             border-radius: 5px;
             border: 1px solid #ccc;
             font-size: 16px;
+            background: #E3F2FD;
+        }
+        form input:focus {
+            background: #fff3e0;
+            outline: none;
+        }
+        .stay-type {
+            display: flex;
+            gap: 20px;
+            margin-top: 10px;
+        }
+        .stay-type div {
+            display: flex;
+            align-items: center;
+        }
+        .stay-type label {
+            margin-left: 5px;
+            font-weight: normal;
         }
         form button {
             width: 100%;
@@ -91,6 +109,22 @@
                 <label for="members">Members:</label>
                 <input type="number" id="members" name="members" placeholder="Enter number of members" min="1" required>
 
+                <label>Type of Stay:</label>
+                <div class="stay-type">
+                    <div>
+                        <input type="radio" id="home" name="stayType" value="Home" required>
+                        <label for="home">Home</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="villa" name="stayType" value="Villa">
+                        <label for="villa">Villa</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="apartment" name="stayType" value="Apartment">
+                        <label for="apartment">Apartment</label>
+                    </div>
+                </div>
+
                 <button type="submit">Search</button>
             </form>
         </div>
@@ -98,4 +132,3 @@
     </div>
 </body>
 </html>
-
