--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
         <a href="#home">Home</a>
         <a href="#" id="searchBtn">🔍 Search</a>
         <a href="travel.html">Travel Tips</a>
-        <a href="#booking">Booking</a>
+        <div class="dropdown">
+            <a href="#">Booking ▼</a>
+            <div class="dropdown-content">
+                <a href="stays.html">Stays</a>
+                <a href="attractions.html">Attractions</a>
+                <a href="#">Package</a>
+            </div>
+        </div>
     </div>
 
     <div id="searchContainer" class="search-container">
